--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </div>
 </div>
 
+<div id="coords"></div>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="assets/js/scriptWix.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
 </html>
