--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <div id="coords"></div>
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="assets/js/scriptWix.js"></script>
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="assets/js/scriptWix.js"></script>   -->
 <script src="assets/js/app.js"></script>
 </body>
 </html>
