--- a/index.html
+++ b/index.html
@@ -13,25 +13,38 @@
 
 <div class="container container-fluid p-4 mt-2">
 
-<form>
-    <div class="form-group">
-        <input type="text" id="input" class="form-control-lg">
-        <label for="select">Type:</label>
-        <select class="form-control-lg" id="select">
-            <option value="1">Café</option>
-            <option value="18">Fine Dining</option>
-            <option value="16">Casual Dining</option>
-            <option value="31">Bakery</option>
-        </select>
-        <div class="btn btn-primary" id="run">Run</div>
-    </div>
-</form>
+    <form>
+        <div class="form-group">
+            <input type="text" id="input" class="form-control-lg">
+            <label for="select">Type:</label>
+            <select class="form-control-lg" id="select">
+                <option value="1">Café</option>
+                <option value="18">Fine Dining</option>
+                <option value="16">Casual Dining</option>
+                <option value="31">Bakery</option>
+            </select>
+            <div class="btn btn-primary" id="run">Run</div>
+        </div>
+    </form>
 
-<div id="coords"></div>
-<div id="cityName"></div>
-<div id="foodplaces"></div>
+    <div id="target"></div>
+
+
+    <div id="coords"></div>
+    <div id="cityName"></div>
+    <div id="foodplaces"></div>
 
 </div>
+
+<template id="temp">
+    <div class="border border-dark mb-2">
+        <div class="name"></div>
+        <div class="rating"></div>
+        <div class="location"></div>
+        <div class="phone"></div>
+        <div class="timings"></div>
+    </div>
+</template>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <!-- <script src="assets/js/geolocator.js"></script> -->
