dropdown menu values

--- a/template.eloualid/index.html
+++ b/template.eloualid/index.html
@@ -30,10 +30,10 @@
           </div>
           <div class="input-field fouth-wrap">
             <select data-trigger="" name="choices-single-defaul">
-              <option>Café</option>
-              <option>casual dining</option>
-              <option>Fine dining</option>
-              <option>Bakery</option>
+              <option value = "1">Café</option>
+              <option value="16">casual dining</option>
+              <option value="18">Fine dining</option>
+              <option value="31">Bakery</option>
             </select>
           </div>
           <div class="input-field fifth-wrap">
