--- a/template.eloualid/index.html
+++ b/template.eloualid/index.html
@@ -31,7 +31,7 @@
           <div class="input-field fouth-wrap">
             <select data-trigger="" name="choices-single-defaul">
               <option value = "1">Café</option>
-              <option value="16">casual dining</option>
+              <option value="16">Casual dining</option>
               <option value="18">Fine dining</option>
               <option value="31">Bakery</option>
             </select>
