started changing html

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Find your Restaurant</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="1.png"/>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
 
-<div class="container container-fluid p-4 mt-2">
+<div id="background"></div>
+<div id="background-filter"></div>
 
+<div class="container container-fluid p-4 mt-2">
     <form>
         <div class="form-group">
             <input type="text" id="input" class="form-control-lg">
