--- a/template.eloualid/index.html
+++ b/template.eloualid/index.html
@@ -1,64 +1,45 @@
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="author" content="colorlib.com">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="images/3.png"/>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
+    <link href="css/main.css" rel="stylesheet"/>
     <title>The Chefs</title>
-  </head>
-  <body>
-
-  <div>
-  <img class="img" src="images/si.png">
-  </div>
-    <div class="s002">
-      <form>
+</head>
+<body>
+<div class="s002">
+    <form>
         <fieldset>
-          <legend id="choose">Choose your Restaurant</legend>
+            <legend id="choose">Choose your Restaurant</legend>
         </fieldset>
         <div class="inner-form">
-          <div class="input-field first-wrap">
-            <div class="icon-wrap">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"></path>
-              </svg>
+            <div class="input-field first-wrap">
+                <div class="icon-wrap">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"></path>
+                    </svg>
+                </div>
+                <input id="search" type="text" placeholder="Are you hungry ?"/>
             </div>
-            <input id="search" type="text" placeholder="Are you hungry ?" />
-          </div>
-          <div class="input-field fouth-wrap">
-            <select data-trigger="" name="choices-single-defaul">
-              <option value = "1">Café</option>
-              <option value="16">casual dining</option>
-              <option value="18">Fine dining</option>
-              <option value="31">Bakery</option>
-            </select>
-          </div>
-          <div class="input-field fifth-wrap">
-            <button class="btn-search" type="button">SEARCH</button>
-          </div>
-          <div class="input-field fifth-wrap ">
-            <button class="btn-search" type="button">GEOLOCATION</button>
-          </div>
+            <div class="input-field fouth-wrap">
+                <select class="form-control-lg" data-trigger="" name="choices-single-default">
+                    <option value="1">Café</option>
+                    <option value="16">casual dining</option>
+                    <option value="18">Fine dining</option>
+                    <option value="31">Bakery</option>
+                </select>
+            </div>
+            <div class="input-field fifth-wrap">
+                <button class="btn-search" type="button">SEARCH</button>
+            </div>
+            <div class="input-field fifth-wrap ">
+                <button class="btn-search" type="button">GEOLOCATION</button>
+            </div>
         </div>
-      </form>
-    </div>
-    <script src="js/extention/choices.js"></script>
-    <script src="js/extention/flatpickr.js"></script>
-    <script>
-      flatpickr(".datepicker",
-      {});
+    </form>
+</div>
 
-    </script>
-    <script>
-      const choices = new Choices('[data-trigger]',
-      {
-        searchEnabled: false,
-        itemSelectText: '',
-      });
-
-    </script>
-  </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
 </html>
