--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </template>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<!-- <script src="assets/js/geolocator.js"></script> -->
+<script src="assets/js/geolocator.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
 </html>
