--- a/template.eloualid/index.html
+++ b/template.eloualid/index.html
@@ -9,6 +9,20 @@
     <title>The Chefs</title>
 </head>
 <body>
+    <link rel="icon" type="image/png" href="images/3.png"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <title>The Chefs</title>
+
+</head>
+<body>
+
+<div>
+    <img class="img" src="images/si.png">
+</div>
 <div class="s002">
     <form>
         <fieldset>
@@ -24,7 +38,8 @@
                 <input id="search" type="text" placeholder="Are you hungry ?"/>
             </div>
             <div class="input-field fouth-wrap">
-                <select class="form-control-lg" data-trigger="" name="choices-single-default">
+
+                <select data-trigger="" name="choices-single-defaul">
                     <option value="1">Café</option>
                     <option value="16">Casual dining</option>
                     <option value="18">Fine dining</option>
@@ -41,5 +56,63 @@
     </form>
 </div>
 
+
+            </div>
+        </div>
+    </form>
+</div>
+
+
+<footer class="page-footer">
+    <div class="pt-4 pb-5 footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xs-12 about-company">
+                    <h2>FoodieFinder</h2>
+                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
+                        or cafes from your location. </p>
+                    <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
+                            class="fa fa-linkedin-square"></i></a></p>
+                </div>
+                <div class="col-lg-3 col-xs-12 links">
+                    <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                    <ul class="m-0 p-0">
+                        <li>- <a href="#">Lorem ipsum</a></li>
+                        <li>- <a href="#">Nam mauris velit</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-xs-12 location">
+                    <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                    <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                    <p class="mb-0">
+                        <i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col copyright">
+                    <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+<script src="js/extention/choices.js"></script>
+<script src="js/extention/flatpickr.js"></script>
+<script>
+    flatpickr(".datepicker",
+        {});
+
+</script>
+<script>
+    const choices = new Choices('[data-trigger]',
+        {
+            searchEnabled: false,
+            itemSelectText: '',
+        });
+
+</script>
 </body>
 </html>
