--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
     <form>
         <div class="form-group form-row">
             <div class="col-5 ml-auto">
-                <input type="text" id="input" class="form-control form-control-lg" placeholder="City, but not Belgium">
+                <input type="text" id="input" class="form-control form-control-lg" placeholder="City, but not in Belgium">
             </div>
             <div class="col-4">
                 <select class="form-control form-control-lg" id="select">
-                    <option value="1">Café</option>
+                    <option value="275">Pizzeria</option>
+                    <option value="101">Diner</option>
+                    <option value="271">Sandwich Shop</option>
                     <option value="18">Fine Dining</option>
                     <option value="16">Casual Dining</option>
-                    <option value="31">Bakery</option>
+                    <option value="281">Fast Food</option>
+                    <option value="91">Bistro</option>
+                    <option value="1">Café</option>
                 </select>
             </div>
             <div class="btn btn-secondary mr-auto ml-2" id="run">Search</div>
