--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <div class="btn btn-secondary mr-auto ml-2" id="run">Search</div>
         </div>
     </form>
-    <div id="target"></div>
+    <div id="target" class="p-3"></div>
 </div>
 
 <template id="temp">
-    <div class="border border-light mb-2 text-light p-3 temp-card">
+    <div class="border border-light mb-5 text-light p-3 temp-card">
         <div class="row text-center text-center">
             <div class="col">
                 <h3 class="name"></h3>
