--- a/contactPage.html
+++ b/contactPage.html
@@ -3,36 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>FoodieFinder</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/contactPage.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
+    <link href="template.eloualid/css/main.css" rel="stylesheet"/>
+    <link rel="icon" type="image/png" href="template.eloualid/images/3.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container bg-light">
-        <div>
+
+    <main class="container bg-light">
+        <section>
             <h1>Contact Us</h1>
             <h6>Have a question or a comment about our product?</h6><br>
             <p>Feel free to fill in our contact form and we will get back to you as soon as possible</p>
-        </div>
-        <div class="row">
-            <div class="column">
-                <div id="map"></div>
+        </section>
+        <div class="form-row">
+            <div class="col-xl-7 col-sm-12">
+                <div id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4997.312635127503!2d4.396653731048179!3d51.22540655952041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f6591c88f09d%3A0x31d6c38718baba03!2sThe%20Beacon!5e0!3m2!1snl!2sbe!4v1568798409282!5m2!1snl!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
             </div>
-            <divgit pu class="row">
-                    <form action="/action_page.php">
-                        <label for="fname">First Name</label>
-                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-                        <label for="lname">Last Name</label>
-                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                        <label for="country">Country</label>
-                        <input type="text" id="country" name="country">
-                        <label for="subject">Subject</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-                        <input type="submit" value="Submit">
-                    </form>
-                </divgit>
+            <div class="col-xl-5 col-sm-12 d-flex justify-content-center">
+                <form class="m-5" action="/action_page.php">
+                    <label class="my-1 mx-auto" for="fname">First Name</label>
+                    <input class="m-2 form-control" type="text" id="fname" name="firstname" placeholder="Your name..">
+                    <label class="my-1 mx-auto" for="lname">Last Name</label>
+                    <input class="m-2 form-control" type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label class="my-1 mx-auto" for="subject">Subject</label>
+                    <textarea rows="5"  cols="30" class="m-2 form-control" id="subject" name="subject" placeholder="Write your message here..."></textarea>
+                    <input class="btn btn-primary" type="submit" value="Submit">
+                </form>
             </div>
-
         </div>
-    </div>
+    </main>
+    <footer class="page-footer">
+        <div class="pt-4 pb-5 footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-xs-12 about-company">
+                        <h2>FoodieFinder</h2>
+                        <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
+                            or cafes from your location. </p>
+                        <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
+                                class="fa fa-linkedin-square"></i></a></p>
+                    </div>
+                    <div class="col-lg-3 col-xs-12 links">
+                        <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                        <ul class="m-0 p-0">
+                            <li>- <a href="./template.eloualid/index.html">Home</a></li>
+                            <li>- <a href="./contactPage.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-xs-12 location">
+                        <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                        <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                        <p class="mb-0">
+                            <i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                        <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col copyright">
+                        <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
