--- a/infoPage.html
+++ b/infoPage.html
@@ -9,9 +9,43 @@
         <div>
             <h1>About us</h1>
             <h6> People excited about food for people who are hungry</h6><br>
-            <p></p>
+            <p>We are a small company started with great taste in food.</p>
+
         </div>
     </div>
-
+    <footer class="page-footer">
+        <div class="pt-4 pb-5 footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-xs-12 about-company">
+                        <h2>FoodieFinder</h2>
+                        <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
+                            or cafes from your location. </p>
+                        <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
+                                class="fa fa-linkedin-square"></i></a></p>
+                    </div>
+                    <div class="col-lg-3 col-xs-12 links">
+                        <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                        <ul class="m-0 p-0">
+                            <li>- <a href="#">Lorem ipsum</a></li>
+                            <li>- <a href="#">Nam mauris velit</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-xs-12 location">
+                        <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                        <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                        <p class="mb-0">
+                            <i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                        <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col copyright">
+                        <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
