--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" type="image/png" href="1.png"/>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
 <body>
 
@@ -42,6 +41,41 @@
     </form>
     <div id="target"></div>
 </div>
+
+<footer class="page-footer text-white">
+    <div class="pt-4 footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xs-12 about-company">
+                    <h2>FoodieFinder</h2>
+                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
+                        or cafes from your location. </p>
+                    <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
+                            class="fa fa-linkedin-square"></i></a></p>
+                </div>
+                <div class="col-lg-3 col-xs-12 links">
+                    <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                    <ul class="m-0 p-0">
+                        <li>- <a href="#">Lorem ipsum</a></li>
+                        <li>- <a href="#">Nam mauris velit</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-xs-12 location">
+                    <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                    <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                    <p class="mb-0">
+                        <i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col copyright">
+                    <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <template id="temp">
     <div class="border border-light mb-2 text-light p-3 temp-card">
