--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<div class="container p-4 text-center w-50 mt-5">
+<div class="container p-4 text-center mt-5">
     <form>
         <div class="form-group form-row">
             <div class="col-5 ml-auto">
