--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div class="container p-4 text-center mt-5">
+<div class="container p-4 text-center mt-5 w-50">
     <form>
         <div class="form-group form-row">
             <div class="col-5 ml-auto">
@@ -87,6 +87,14 @@
         <div class="row mt-3 text-center">
             <div class="col">
                 <p class="timings"></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col coins">
+                <div class="coin1"></div>
+                <div class="coin2"></div>
+                <div class="coin3"></div>
+                <div class="coin4"></div>
             </div>
         </div>
     </div>
