--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     </div>
 </div>
 
-<div class="container p-4 text-center mt-5">
+<div class="container p-4 text-center mt-5 ">
     <form>
-        <div class="form-group form-row">
+        <div class="form-group form-row mx-auto">
             <div class="col-5 ml-auto">
-                <input type="text" id="input" class="form-control form-control-lg" placeholder="City, but not in Belgium">
+                <input type="text" id="input" class="form-control form-control-lg" placeholder="City, but not in Belgium" required>
             </div>
             <div class="col-4">
                 <select class="form-control form-control-lg" id="select">
@@ -60,7 +60,7 @@
                     <option value="1">Café</option>
                 </select>
             </div>
-            <div class="btn btn-secondary mr-auto ml-2" id="run">Search</div>
+            <div class="btn btn-secondary btn-md mr-auto" id="run">Search</div>
         </div>
     </form>
     <div id="target" class="p-3"></div>
