--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div class="container p-4 text-center mt-5 w-50">
+<div class="container p-4 text-center mt-5">
     <form>
         <div class="form-group form-row mx-auto">
             <div class="col-5 ml-auto">
