--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 </head>
 <body>
 
-<div class="container p-4 text-center mt-5 w-50">
+<div class="container p-4 text-center mt-5 border border-light">
 
-    <div class="row border border-light">
+    <div class="row">
         <div class="col mx-auto">
             <div id="bigLogo" class="mx-auto">
         </div>
     </div>
 
-    <form>
-        <div class="form-group form-row mx-auto">
+    <form class="mx-auto">
+        <div class="form-group form-row mx-auto border border-light">
             <div class="col-5 ml-auto">
                 <input type="text" id="input" class="form-control form-control-lg"
                        placeholder="City, but not in Belgium" required>
