links + more info + small change

--- a/infoPage.html
+++ b/infoPage.html
@@ -13,6 +13,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
+<br>
 <div class="container bg-light">
     <div>
         <h1>About us</h1>
@@ -20,16 +21,21 @@
             as close as possible using your geolocation or city.</h6>
         <h6>The company has been created among 5 young people excited to create a
             website that helps anyone who has no idea how to find a perfect place
-            to enjoy food.</h6>
+            to enjoy food.In our company we know that continuing to innovate and make small changes is very important so
+            that the
+            consumer is always happy that's why we work hard to be able to give the best result. Always finding the best
+            restaurant as close as possible is not easy, so this company promises a lot, we combine the information and
+            reviews of all the restaurants with your tastes, that is our top priority.</h6>
+        <h6>Why waste time searching or asking on the street if we give it to you on a tray?</h6>
+
         <br>
         <p>We are a small company started with great taste in food.</p>
     </div>
 </div>
+<br>
 
 
 <footer class="teamPic"></footer>
-
-
 
 
 <footer class="page-footer">
@@ -46,16 +52,17 @@
                 <div class="col-lg-3 col-xs-12 links">
                     <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                     <ul class="m-0 p-0">
-                        <li>- <a href="#">Lorem ipsum</a></li>
-                        <li>- <a href="#">Nam mauris velit</a></li>
+                        <li>- <a href="./template.eloualid/index.html">Home</a></li>
+                        <li>- <a href="./contactPage.html">Contact Us</a></li>
+                        <li>- <a href="./infoPage.html">About Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                    <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                    <p>Tolhuis, Sint-Pietersvliet 7, 2000 Antwerpen</p>
                     <p class="mb-0">
-                        <i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
-                    <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                        <i class="fa fa-phone mr-3"></i>0487 44 80 49</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>foodiefinds19@gmail.com</p>
                 </div>
             </div>
             <div class="row mt-5">
