--- a/contactPage.html
+++ b/contactPage.html
@@ -61,6 +61,7 @@
                     <ul class="m-0 p-0">
                         <li>- <a href="./template.eloualid/index.html">Home</a></li>
                         <li>- <a href="./contactPage.html">Contact Us</a></li>
+                        <li>- <a href="./infoPage.html">About Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-xs-12 location">
