--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                     <ul class="m-0 p-0">
                         <li>- <a href="./index.html">Home</a></li>
+                        <li>- <a href="./contactPage.html">Contact Us</a></li>
                         <li>- <a href="./infoPage.html">About Us</a></li>
-                        <li>- <a href="./contactPage.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-xs-12 location">
