--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <option value="1">Café</option>
                         </select>
                     </div>
-                    <div class="btn btn-danger mr-auto ml-2" id="run">Find Food!</div>
+                    <div class="btn btn-danger mr-auto ml-2" id="run">Find!</div>
                 </div>
             </form>
             <div id="target" class="p-3"></div>
