updating the contact page

--- a/contactPage.html
+++ b/contactPage.html
@@ -3,19 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>FoodieFinder</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/contactPage.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
-    <link href="template.eloualid/css/main.css" rel="stylesheet"/>
     <link rel="icon" type="image/png" href="template.eloualid/images/3.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/contactPage.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 </head>
 <body>
-<header class="header d-flex justify-content-center">
-    <img src="src/LOGO2.svg">
+<header class="page-header text-white">
+        <div class="pt-4 header margin" id="header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-xs-12 about-company">
+                        <h2>FoodieFinder</h2>
+                        <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
+                                class="fa fa-linkedin-square"></i></a></p>
+                    </div>
+                    <div class="col-lg-3 col-xs-12 links">
+                        <ul class="m-0 p-0">
+                            <li>- <a href="http://localhost:63342/agile-week-resto/index.html?_ijt=o9seoifdmbv5ef3fad9r5j2vd6">Home</a></li>
+                            <li>- <a href="http://localhost:63342/agile-week-resto/contactPage.html?_ijt=fjnkavtom3uiosmkvpjdv9pkto">Contact Us</a></li>
+                            <li>- <a href="http://localhost:63342/agile-week-resto/infoPage.html?_ijt=gva1qvg12bagtovir6clma1q9n">About Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 </header>
 <main class="container bg-light mt-3">
     <section>
