--- a/contactPage.html
+++ b/contactPage.html
@@ -33,15 +33,18 @@
             </div>
         </div>
         <div class="col-xl-5 col-sm-12 d-flex justify-content-center">
-            <form class="m-5" action="/action_page.php">
-                <label class="my-1 mx-auto pl-3" for="fname">Name</label>
-                <input class="m-2 form-control" type="text" id="fname" name="firstname" placeholder="Your name..">
-                <label class="my-1 mx-auto pl-3">Email</label>
-                <input class="m-2 form-control" type="text" id="lname" name="lastname" placeholder="Your email address..">
+            <form class="m-5" action="mailto:foodiefinds19@gmail.com" method="post" enctype="text/plain">
+                <label class="my-1 mx-auto pl-3" for="name">Name</label>
+                <input class="m-2 form-control" type="text" id="name" name="name" placeholder="Your name...">
+                <label class="my-1 mx-auto pl-3" for="from_email">Email</label>
+                <input class="m-2 form-control" type="text" id="from_email" name="from_email" placeholder="Your email address...">
                 <label class="my-1 mx-auto pl-3" for="subject">Subject</label>
-                <textarea rows="5" cols="30" class="m-2 form-control" id="subject" name="subject"
+                <input class="m-2 form-control" type="text" id="subject" name="subject" placeholder="Your subject...">
+                <label class="my-1 mx-auto pl-3" for="message">Message</label>
+                <textarea rows="5" cols="30" class="m-2 form-control" id="message" name="message"
                           placeholder="Write your message here..."></textarea>
-                <input class="btn btn-primary mt-2 ml-3" type="submit" value="Submit">
+                <input class="btn btn-primary mt-2 ml-3" type="submit" value="Send Email">
+                <input class="btn btn-primary mt-2 ml-3" type="reset" value="Reset">
             </form>
         </div>
     </div>
@@ -83,5 +86,6 @@
         </div>
     </div>
 </footer>
+<script src="./assets/js/contact.js"></script>
 </body>
 </html>
