contact page is done!

--- a/contactPage.html
+++ b/contactPage.html
@@ -13,25 +13,41 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<header class="page-header text-white">
-        <div class="pt-4 header margin" id="header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 col-xs-12 about-company">
-                        <h2>FoodieFinder</h2>
-                        <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
-                                class="fa fa-linkedin-square"></i></a></p>
-                    </div>
-                    <div class="col-lg-3 col-xs-12 links">
-                        <ul class="m-0 p-0">
-                            <li>- <a href="http://localhost:63342/agile-week-resto/index.html?_ijt=o9seoifdmbv5ef3fad9r5j2vd6">Home</a></li>
-                            <li>- <a href="http://localhost:63342/agile-week-resto/contactPage.html?_ijt=fjnkavtom3uiosmkvpjdv9pkto">Contact Us</a></li>
-                            <li>- <a href="http://localhost:63342/agile-week-resto/infoPage.html?_ijt=gva1qvg12bagtovir6clma1q9n">About Us</a></li>
-                        </ul>
-                    </div>
+<header>
+    <div class="navbar-header  text-white">
+        <div class="container fluid">
+
+            <div class="pt-4 header margin row" id="header">
+
+                <div class="col-6">
+
+                    <h2>FoodieFinder</h2>
+                </div>
+                <div class="col-4">
+                    <ul class="nav">
+                        <li>
+                            <button type="button" class="btn">
+                                <a href="http://localhost:63342/agile-week-resto/index.html?_ijt=o9seoifdmbv5ef3fad9r5j2vd6">Home</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button" class="btn">
+                                <a href="http://localhost:63342/agile-week-resto/contactPage.html?_ijt=fjnkavtom3uiosmkvpjdv9pkto">Contact
+                                    Us</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button type="button" class="btn">
+                                <a href="http://localhost:63342/agile-week-resto/infoPage.html?_ijt=gva1qvg12bagtovir6clma1q9n">About
+                                    Us</a>
+                            </button>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </div>
+
 </header>
 <main class="container bg-light mt-3">
     <section>
@@ -53,7 +69,8 @@
                 <label class="my-1 mx-auto pl-3" for="fname">Name</label>
                 <input class="m-2 form-control" type="text" id="fname" name="firstname" placeholder="Your name..">
                 <label class="my-1 mx-auto pl-3">Email</label>
-                <input class="m-2 form-control" type="text" id="lname" name="lastname" placeholder="Your email address..">
+                <input class="m-2 form-control" type="text" id="lname" name="lastname"
+                       placeholder="Your email address..">
                 <label class="my-1 mx-auto pl-3" for="subject">Subject</label>
                 <textarea rows="5" cols="30" class="m-2 form-control" id="subject" name="subject"
                           placeholder="Write your message here..."></textarea>
@@ -74,18 +91,9 @@
                     <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
                             class="fa fa-linkedin-square"></i></a></p>
                 </div>
-                <div class="col-lg-3 col-xs-12 links">
-                    <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-                    <ul class="m-0 p-0">
-                        <li>- <a href="./index.html">Home</a></li>
-                        <li>- <a href="./infoPage.html">About Us</a></li>
-                        <li>- <a href="./contactPage.html">Contact</a></li>
-                        <li>- <a href="./infoPage.html">About Us</a></li>
-                    </ul>
-                </div>
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                    <p>  Tolhuis, Sint-Pietersvliet 7, 2000 Antwerpen</p>
+                    <p> Tolhuis, Sint-Pietersvliet 7, 2000 Antwerpen</p>
                     <p class="mb-0">
                         <i class="fa fa-phone mr-3"></i>0487 44 80 49</p>
                     <p><i class="fa fa-envelope-o mr-3"></i>foodiefinds19@gmail.com</p>
