--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </div>
         </div>
     </form>
+    <h2 id="targetText" class="text-white mt-2"></h2>
     <div id="target" class="p-3 mt-3"></div>
 </div>
 
@@ -78,7 +79,7 @@
             </div>
         </div>
         <div class="row mt-1 mx-auto">
-            <div class="col-4 border border-light p-2">
+            <div class="col-4 p-2">
                 <div class="coins mx-auto">
                     <div class="coin1 ml-auto"></div>
                     <div class="coin2"></div>
@@ -86,11 +87,13 @@
                     <div class="coin4 mr-auto"></div>
                 </div>
             </div>
-            <div class="col-4 border border-light p-2">
+            <div class="col-4 p-2">
                 <div class="delivers text-center"></div>
             </div>
-            <div class="col-4 border border-light">
-                <div class="tags"></div>
+            <div class="col-4">
+                <div class="tags p-2">
+                    <p class="tagsPar"></p>
+                </div>
             </div>
         </div>
     </div>
