--- a/infoPage.html
+++ b/infoPage.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FoodieFinder</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="template.eloualid/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/infopage.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,37 +13,41 @@
 </head>
 <body>
 <br>
-<div class="container bg-light">
+<div class="container ">
     <div>
-        <h1>About us</h1>
-        <h6> FoodieFinder is a company specialized in finding a restaurant or cafe
-            as close as possible using your geolocation or city.</h6>
-        <h6>The company has been created among 5 young people excited to create a
+        <h1 class="title">About Us</h1>
+        <p class="title1">We are a small company started in 2019 with great taste in food eager to revolutionize restaurant searches.  </p>
+        <img class="teamPic">
+
+        <p class="font-weight-bold font-italic"  >FoodieFinder is a company specialized in finding a restaurant or cafe
+            as close as possible using your geolocation or city.</p>
+        <p>The company has been created among 5 young people excited to create a
             website that helps anyone who has no idea how to find a perfect place
             to enjoy food.In our company we know that continuing to innovate and make small changes is very important so
             that the
             consumer is always happy that's why we work hard to be able to give the best result. Always finding the best
             restaurant as close as possible is not easy, so this company promises a lot, we combine the information and
-            reviews of all the restaurants with your tastes, that is our top priority.</h6>
-        <h6>Why waste time searching or asking on the street if we give it to you on a tray?</h6>
+            reviews of all the restaurants with your tastes, that is our top priority.Why waste time searching or asking
+            on the street if we give it to you on a tray? </p>
 
-        <br>
-        <p>We are a small company started with great taste in food.</p>
+
     </div>
 </div>
 <br>
 
 
-<footer class="teamPic"></footer>
+<!--<footer class="teamPic"></footer>-->
+<br>
 
 
-<footer class="page-footer">
-    <div class="pt-4 pb-5 footer">
+<footer class="page-footer text-white">
+    <div class="pt-4 footer margin" id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xs-12 about-company">
                     <h2>FoodieFinder</h2>
-                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
+                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best
+                        restaurants
                         or cafes from your location. </p>
                     <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
                             class="fa fa-linkedin-square"></i></a></p>
@@ -52,20 +55,20 @@
                 <div class="col-lg-3 col-xs-12 links">
                     <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                     <ul class="m-0 p-0">
-                        <li>- <a href="./template.eloualid/index.html">Home</a></li>
+                        <li>- <a href="./index.html">Home</a></li>
                         <li>- <a href="./contactPage.html">Contact Us</a></li>
                         <li>- <a href="./infoPage.html">About Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                    <p>Tolhuis, Sint-Pietersvliet 7, 2000 Antwerpen</p>
+                    <p> Tolhuis, Sint-Pietersvliet 7, 2000 Antwerpen</p>
                     <p class="mb-0">
                         <i class="fa fa-phone mr-3"></i>0487 44 80 49</p>
                     <p><i class="fa fa-envelope-o mr-3"></i>foodiefinds19@gmail.com</p>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row">
                 <div class="col copyright">
                     <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
                 </div>
