--- a/contactPage.html
+++ b/contactPage.html
@@ -5,7 +5,7 @@
     <title>FoodieFinder</title>
     <link rel="stylesheet" type="text/css" href="assets/css/contactPage.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
-    <link href="template.eloualid/css/main.css" rel="stylesheet"/>
+    <link href="assets/css/infopage.css" rel="stylesheet"/>
     <link rel="icon" type="image/png" href="template.eloualid/images/3.png"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -60,8 +60,7 @@
                     <h4 class="mt-lg-0 mt-sm-3">Links</h4>
                     <ul class="m-0 p-0">
                         <li>- <a href="./index.html">Home</a></li>
-                        <li>- <a href="./infoPage.html">About Us</a></li>
-                        <li>- <a href="./contactPage.html">Contact</a></li>
+                        <li>- <a href="./contactPage.html">Contact Us</a></li>
                         <li>- <a href="./infoPage.html">About Us</a></li>
                     </ul>
                 </div>
