--- a/template.eloualid/index.html
+++ b/template.eloualid/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
-    <link href="css/main.css" rel="stylesheet"/>
+    <link href="../assets/css/infopage.css" rel="stylesheet"/>
     <title>The Chefs</title>
 
     <link rel="icon" type="image/png" href="images/3.png"/>
