added image urls to data attr

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 <h3 class="name"></h3>
             </div>
             <div class="col">
+                <img class="photos" style="height:20%" src="" alt="">
+            </div>
+            <div class="col">
                 <div class="rating"></div>
             </div>
         </div>
