adding footer for ifo page

--- a/infoPage.html
+++ b/infoPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FoodieFinder</title>
     <link rel="stylesheet" type="text/css" href="assets/css/infopage.css">
+    <link rel="icon" type="image/png" href="./src/Icon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,8 +13,13 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
+
+
+
+
+
 <br>
-<div class="container ">
+<div class="container bg-light">
     <div>
         <h1 class="title">About Us</h1>
         <p class="title1">We are a small company started in 2019 with great taste in food eager to revolutionize restaurant searches.  </p>
@@ -29,8 +35,6 @@
             restaurant as close as possible is not easy, so this company promises a lot, we combine the information and
             reviews of all the restaurants with your tastes, that is our top priority.Why waste time searching or asking
             on the street if we give it to you on a tray? </p>
-
-
     </div>
 </div>
 <br>
@@ -46,8 +50,7 @@
             <div class="row">
                 <div class="col-lg-5 col-xs-12 about-company">
                     <h2>FoodieFinder</h2>
-                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best
-                        restaurants
+                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
                         or cafes from your location. </p>
                     <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
                             class="fa fa-linkedin-square"></i></a></p>
