--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 <template id="temp">
     <div class="border border-light mb-5 text-light p-3 temp-card">
         <div class="row text-center text-center">
-            <div class="col">
+            <div class="col-5">
                 <h3 class="name"></h3>
             </div>
-            <div class="col">
-                <img class="photos" style="height:20%" src="" alt="">
+            <div class="col-2 photo-wrap">
+                <img class="photos grow" src="" alt="">
             </div>
-            <div class="col">
+            <div class="col-5">
                 <div class="rating"></div>
             </div>
         </div>
