--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="row text-center">
             <div class="col-xl-7 col-lg-5 col-md-7 mx-auto mt-1">
                 <div class="btn btn-danger form-control" id="run">Find Food!</div>
+                <div class="btn btn-danger form-control" id="geo">Find Me!</div>
             </div>
         </div>
     </form>
@@ -60,9 +61,6 @@
         <div class="row text-center text-center">
             <div class="col">
                 <h3 class="name"></h3>
-            </div>
-            <div class="col">
-                <img class="photos" style="height:20%" src="" alt="">
             </div>
             <div class="col">
                 <div class="rating"></div>
