--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 <div class="btn btn-danger form-control" id="run">Find Food!</div>
             </div>
         </div>
+        <div class="row text-center">
+            <div class="col-xl-7 col-lg-5 col-md-7 mx-auto mt-1">
+                <div class="btn btn-success form-control" id="geo">Find Me!</div>
+            </div>
+        </div>
     </form>
     <h2 id="targetText" class="text-white mt-2"></h2>
     <div id="target" class="p-3 mt-3"></div>
