adding header to home page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 </head>
 <body>
 
+<header>
+
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 shadow-sm">
+        <h4 class="my-0 mr-md-auto font-weight-normal text-white">FoodieFinder</h4>
+        <nav class="my-2 my-md-0 mr-md-3">
+            <a class="p-2 text-white" href="./index.html">Home</a>
+            <a class="p-2 text-white" href="./contactPage.html">Contact</a>
+            <a class="p-2 text-white" href="infoPage.html">Info</a>
+
+        </nav>
+    </div>
+
+</header>
+
 <div class="container p-4 text-center mt-2">
     <div class="row">
         <div class="col mx-auto">
