alt site extra info working on template

--- a/ALTsite/indexalt.html
+++ b/ALTsite/indexalt.html
@@ -63,10 +63,7 @@
     <div class="p-4 mt-4" id="target"></div>
 
 
-
-
-
-
+<-- orig template -->
     <template id="temp2">
         <div class="border border-light mb-5 text-light p-3 temp-card">
             <div class="row text-center text-center">
@@ -118,11 +115,14 @@
 
 
 
+
+    <-- alt template -->
     <template id="temp">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
             <h4 class="my-0 font-weight-normal name">Free</h4>
         </div>
+        <img class="card-img-top photos grow" src="..." alt="Card image cap">
         <div class="card-body">
             <h1 class="card-title pricing-card-title rating">$0 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
