--- a/infoPage.html
+++ b/infoPage.html
@@ -96,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col copyright">
-                    <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                    <p><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
                 </div>
             </div>
         </div>
